added tile bg, about us section, and photo section

--- a/index.html
+++ b/index.html
@@ -9,14 +9,28 @@
 <body>
 
     <main>
-        <section id="hero">
-            <div class="container" style="--height: 100vh; --gap: 16px">
-                <div class=" container cursive" style="--height: fit-content">
+        <section id="hero" class="bshadow">
+            <div class="ccontainer" style="--height: 100vh; --gap: 16px; border-bottom: 6px solid coral">
+                <div class=" ccontainer cursive" style="--height: fit-content">
                     <h1 class="bigf shadow">Our Story</h1>
                     <h2 class="shadow" style="font-size: 3em">Ashton & Amanda</h2>
                     <h2 class="underline" style="color: coral">Since 2022</h3>
                 </div>
             </div>
+        </section>
+
+        <section id="content">
+            <div id="about us" class="hcontainer" style="--height: 100vh; --gap: 32px">
+                <h1 class="shadow bunderline" style="color: coral">About Us</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio aliquam sit incidunt qui dolorum voluptatibus eius quisquam excepturi magnam natus suscipit voluptas ipsa alias ea ex facilis laborum, veritatis impedit.</p>
+
+            </div>
+
+            <div id="photos" class="hcontainer" style="--height: 100vh; --gap: 32px; padding-top: 200px">
+                <h1 class="shadow bunderline" style="color:coral">Photos</h1>
+
+            </div>
+
         </section>
 
     </main>
